--- a/Riskvalve/Views/Maintenance/PrintMaintenance.cshtml
+++ b/Riskvalve/Views/Maintenance/PrintMaintenance.cshtml
@@ -168,138 +168,6 @@
     </div>
 </div>
 @section Scripts {
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('header').hide()
-        })
-
-        function saveImage() {
-            // Get the div element
-            var divElement = document.getElementById("print-area");
-
-            // Convert div content to canvas
-            html2canvas(divElement).then(function (canvas) {
-                // Convert canvas to image
-                var imgData = canvas.toDataURL('image/png');
-
-                // Create a link element to download the image
-                var link = document.createElement('a');
-                link.href = imgData;
-                link.download = 'image.png';
-                link.click();
-            });
-        }
-    </script>
+    <script src='~/js/printpage.js'></script>
+    <link rel="stylesheet" href="~/css/maintenance/print.css" asp-append-version="true" />
 }
-<style>
-    input {
-        pointer-events: none
-    }
-
-    #maintenance-print-table td {
-        /* background-color: red; */
-        background-color: white;
-    }
-
-    .text-center {
-        text-align: center;
-    }
-
-    .maintenance-maintenance-row td {
-        /* min-height: 80px; */
-        height: 150px;
-    }
-
-    .maintenance-maintenance-row img {
-        width: 160px;
-        display: block;
-        margin: 0 auto;
-        margin-bottom: 10px;
-    }
-
-    .maintenance-maintenance-row img:last-child {
-        margin-bottom: 0;
-    }
-
-    .risk-chart {
-        position: relative;
-        width: 100%;
-        margin: 0 auto;
-        max-width: 400px;
-    }
-
-    .risk-matrix-legend {
-        width: 100%;
-    }
-
-    .print-risk-table {
-        width: 60%;
-        position: absolute;
-        top: 12%;
-        left: calc(50%);
-        transform: translateX(-50%);
-    }
-
-    .print-risk-table img {
-        width: 100%;
-    }
-
-    .checkbox {
-        width: 50%;
-        text-align: center;
-    }
-
-    .maintenance-print {
-        width: 100%;
-    }
-
-    .table-section {
-        font-weight: bold;
-        background-color: #ccc !important;
-        padding: 8px;
-        text-align: center;
-        text-transform: uppercase;
-        height: 50px;
-    }
-
-    .table-section.no-transform {
-        text-transform: none;
-        font-weight: normal;
-    }
-
-    .table-section.sub-section {
-        text-transform: none;
-        height: 36px;
-    }
-
-    .maintenance-print td.no-padding {
-        padding: 0;
-    }
-
-    .maintenance-print td.spacing {
-        border: none !important;
-        border-bottom-width: 0px;
-        border-top-width: 0px;
-        border-right: solid 1px #000000 !important;
-    }
-
-    .maintenance-print td {
-        border: solid 1px #000000;
-        padding: 5px;
-    }
-
-    .maintenance-print .logo {
-        width: 160px;
-        height: 160px;
-        background-color: grey;
-    }
-
-    .maintenance-print .heading {
-        color: white;
-        background-color: #1f487c !important;
-        font-size: 32px;
-        padding: 15px;
-        text-align: center;
-    }
-</style>
