--- a/Riskvalve/Views/Tool/ImportInspectionMaintenance.cshtml
+++ b/Riskvalve/Views/Tool/ImportInspectionMaintenance.cshtml
@@ -90,63 +90,8 @@
         </main>
     </div>
 </div>
+<input type="hidden" id="urlimportexcel" value="@urlimportexcel">
 
 @section Scripts {
-    <script>
-        var requestVerificationToken = '@tokens.RequestToken';
-        $(document).ready(function () {
-            $("#inspection-form").submit(function (e) {
-                e.preventDefault();
-                var formData = new FormData();
-                formData.append("file", $("#fileUploadInspection")[0].files[0]);
-                formData.append("mode", $("#modeInspection").val());
-                $.ajax({
-                    url: "@urlimportexcel",
-                    type: "POST",
-                    data: formData,
-                    headers: {
-                        'RequestVerificationToken': requestVerificationToken
-                    },
-                    contentType: false,
-                    processData: false,
-                    success: function (data) {
-                        bootbox.alert(data.message, function () {
-                            $("#fileUploadInspection").val('');
-                            location.reload();
-                        });
-                    },
-                    error: function (xhr, status, error) {
-                        console.log(xhr.responseText)
-                        alert('Error submitting the form')
-                    }
-                });
-            });
-            $("#maintenance-form").submit(function (e) {
-                e.preventDefault();
-                var formData = new FormData();
-                formData.append("file", $("#fileUploadMaintenance")[0].files[0]);
-                formData.append("mode", $("#modeMaintenance").val());
-                $.ajax({
-                    url: "@urlimportexcel",
-                    type: "POST",
-                    data: formData,
-                    headers: {
-                        'RequestVerificationToken': requestVerificationToken
-                    },
-                    contentType: false,
-                    processData: false,
-                    success: function (data) {
-                        bootbox.alert(data.message, function () {
-                            $("#fileUploadMaintenance").val('');
-                            location.reload();
-                        });
-                    },
-                    error: function (xhr, status, error) {
-                        console.log(xhr.responseText)
-                        alert('Error submitting the form')
-                    }
-                });
-            });
-        });
-    </script>
+    <script src="~/js/tool/import-inspection-maintenance.js"></script>
 }
