--- a/Riskvalve/Views/AssetRegister/Area.cshtml
+++ b/Riskvalve/Views/AssetRegister/Area.cshtml
@@ -107,114 +107,11 @@
         </div>
     </div>
 </div>
+<input type="hidden" id="urldeletearea" value="@urldeletearea">
+<input type="hidden" id="urlupdatearea" value="@urlupdatearea">
+<input type="hidden" id="urladdarea" value="@urladdarea">
+<input type="hidden" id="urlgetareadetail" value="@urlgetareadetail">
 
 @section Scripts {
-    <script>
-        var requestVerificationToken = '@tokens.RequestToken';
-        function editAction() {
-            $('#field-business-area-name').val('');
-            var mode = $(this).attr('attr-mode');
-            if (mode == 'create') {
-                $('#field-business-area-mode').val('create');
-                $('#btn-area-modal-delete').hide();
-                $('#addAreaModal').modal('show');
-            } else if (mode == 'view') {
-                var id = $(this).attr('attr-itemid');
-                $.ajax({
-                    url: '@urlgetareadetail',
-                    type: 'GET',
-                    data: { id: id },
-                    headers: {
-                        'RequestVerificationToken': requestVerificationToken
-                    },
-                    success: function (apiresult) {
-                        if (apiresult.isSuccess) {
-                            var data = apiresult.data;
-                            $('#field-business-area-mode').val('update');
-                            $('#field-business-area-id').val(data.id);
-                            $('#field-business-area-name').val(data.businessArea);
-                            $('#btn-area-modal-delete').show();
-                            $('#addAreaModal').modal('show');
-                        } else {
-                            alert(apiresult.message);
-                        }
-                    }
-                });
-            }
-        }
-
-        $(document).ready(function () {
-            $('#btn-area-modal-save').click(function () {
-                if ($('.asset-form').valid()) {
-                    var mode = $('#field-business-area-mode').val();
-                    var name = $('#field-business-area-name').val();
-                    if (name == '') {
-                        alert('Business Area Name is required');
-                        return;
-                    } else {
-                        if (mode == 'create') {
-                            $.ajax({
-                                url: '@urladdarea',
-                                type: 'POST',
-                                data: { businessArea: name },
-                                headers: {
-                                    'RequestVerificationToken': requestVerificationToken
-                                },
-                                success: function (apiresult) {
-                                    if (apiresult.isSuccess) {
-                                        alert(apiresult.message);
-                                        location.reload();
-                                    } else {
-                                        alert(apiresult.message);
-                                    }
-                                }
-                            });
-                        } else if (mode == 'update') {
-                            var id = $('#field-business-area-id').val();
-                            $.ajax({
-                                url: '@urlupdatearea',
-                                type: 'POST',
-                                data: { id: id, businessArea: name },
-                                headers: {
-                                    'RequestVerificationToken': requestVerificationToken
-                                },
-                                success: function (apiresult) {
-                                    if (apiresult.isSuccess) {
-                                        alert(apiresult.message);
-                                        location.reload();
-                                    } else {
-                                        alert(apiresult.message);
-                                    }
-                                }
-                            });
-                        }
-                    }
-                }
-            });
-            $('#btn-area-modal-delete').click(function () {
-                var id = $('#field-business-area-id').val();
-                if (confirm('are you sure you want to delete this data?')) {
-                    $.ajax({
-                        url: '@urldeletearea',
-                        type: 'POST',
-                        data: { id: id },
-                        headers: {
-                            'RequestVerificationToken': requestVerificationToken
-                        },
-                        success: function (apiresult) {
-                            if (apiresult.isSuccess) {
-                                alert(apiresult.message);
-                                location.reload();
-                            } else {
-                                alert(apiresult.message);
-                            }
-                        }
-                    });
-                }
-            });
-            initDatatable({
-                ordering: true,
-            })
-        });
-    </script>
+<script src="~/js/asset/area.js"></script>
 }
