--- a/Riskvalve/wwwroot/css/global.css
+++ b/Riskvalve/wwwroot/css/global.css
@@ -1,3 +1,10 @@
+html,
+body {
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+
 .highcharts-credits {
   display: none;
 }
@@ -276,7 +283,7 @@ body {
   font-size: 12px;
 }
 
-.form-control.error {
+.form-control.error, .form-select.error {
   border-color: red;
 }
 
